Image Component added

--- a/src/index.css
+++ b/src/index.css
@@ -53,4 +53,6 @@ img {
 	font-size: 18px;
 	border: 3px dashed blue;
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	max-width: 100%;
+	height: auto;
 }
